tests/help-show-code.stderr
error: 
   ┌─ test:11:1
   │
11 │ Compatible foo bar
   │ ^^^^^^^^^^
   │ │
   │ `foo` is not compatible with `bar`
   │ could not find instance `Compatible Foo Bar`
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/missing-instance

